# flowsight

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  keepalive.yml
backend/: .env.example  Dockerfile  pom.xml
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/api/: analytics.ts  auth.ts  flexibility.ts  insights.ts  leaks.ts  receipts.ts  transactions.ts
desktop/src/components/: ResizeHandles.tsx  ScoreGauge.tsx  TitleBar.tsx  Toaster.tsx  ui.tsx
desktop/src/lib/: api.ts  auth-store.ts  density.tsx  format.ts  refresh.ts  sync.ts  tauri.ts  useAsync.ts  utils.ts  window-mode.ts
desktop/src/views/: CaptureView.tsx  InsightsView.tsx  LoginView.tsx  OverviewView.tsx
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/layout/: command-menu.tsx  header.tsx  shell.tsx  sidebar.tsx
frontend/lib/: api.ts
frontend/store/: auth.ts  index.ts
frontend/types/: index.ts
(+273 files in other folders)
