[package]
name = "flowsight-desktop"
version = "0.1.0"
description = "FlowSight Desktop Companion"
authors = ["FlowSight"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "flowsight_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` unlocks the Window API (get_window / start_resize_dragging) used for
# frameless edge drag-resize in Expanded mode.
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "unstable"] }
tauri-runtime = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# By default Tauri ships with a custom protocol for production assets.
custom-protocol = ["tauri/custom-protocol"]
